# SS24_OOAD

./: README.md
DesignPatterns/: CMakeLists.txt  Display2dStrategy.cpp  Display2dStrategy.h  Display3dStrategy.cpp  Display3dStrategy.h  DisplayStrategy.h  EconomicStrategy.cpp  EconomicStrategy.h  FastStrategy.cpp  FastStrategy.h  Navigation.cpp  Navigation.h  NavigationStrategy.h  ScenicStrategy.cpp  ScenicStrategy.h  main.cpp
Gilded_Rose/: .devcontainer.json  .gitignore  CMakeLists.txt
Gilded_Rose/src/: index.html
Gilded_Rose/src/gilded_rose/: CMakeLists.txt  ConcreteItemCreator.cpp  ConcreteItemCreator.h  GildedRose.cpp  GildedRose.h  GildedRoseUnitTests.cpp  Item.cpp  Item.h  ItemCreator.cpp  ItemCreator.h  ItemTypes.cpp  ItemTypes.h  main.cpp
UML/: BatteryLogger.cpp  BatteryLogger.h  main.cpp
